Adding deserialization logic for Tenor/Price types